--- a/index.html
+++ b/index.html
@@ -13,89 +13,141 @@
     />
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css" />
-    <title>Frontend Mentor | Interactive card details form</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/keyframes.css" />
+    <script>
+      tailwind.config = {
+        theme: {
+          screens: {
+            sm: "375px",
+            // => @media (min-width: 375px) { ... }
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-      .my-bg {
-        background: linear-gradient(
-          164.33deg,
-          #220931 6.35%,
-          #3d114e 13.91%,
-          #4a1951 23.02%,
-          #532339 31.88%,
-          #302d5c 41.49%,
-          #24143b 54.8%,
-          #20082c 100.92%
-        );
-      }
-    </style>
+            md: "1440px",
+            // => @media (min-width: 1440px) { ... }
+          },
+        },
+      };
+    </script>
+    <title>Frontend Mentor | Interactive card details form</title>
   </head>
-  <body>
-    <main class="flex">
-      <section class="my-bg">
-        <article>
-          <div>0000 0000 0000 0000</div>
-          <div>Jane Appleseed 00/00</div>
+
+  <body class="h-screen w-screen overflow-hidden">
+    <main class="flex flex-col md:flex-row md:w-full md:h-full">
+      <section
+        class="md:w-1/4 md:h-full relative h-[25vh] bg-[url('./images/bg-main-mobile.png')] md:bg-[url('./images/bg-main-desktop.png')] bg-no-repeat bg-cover relative flex"
+      >
+        <article
+          class="md:h-[250px] md:w-[450px] md:left-1/2 md:top-auto md:bottom-[25%] md:translate-y-[25%] text-white rounded-lg flex justify-end px-16 items-center bg-[url('./images/bg-card-back.png')] h-3/4 w-3/4 m-6 bg-no-repeat bg-contain absolute -top-3 -right-6"
+        >
+          <p id="card_cvv"></p>
         </article>
-        <article>000</article>
+        <article
+          class="md:h-[250px] md:w-[450px] md:absolute md:left-1/3 md:top-[25%] md:-translate-y-[25%] text-white absolute flex flex-col justify-between gap-1 z-10 -bottom-16 rounded-lg bg-[url('./images/bg-card-front.png')] h-3/4 w-4/5 m-5 px-6 py-10 bg-no-repeat bg-cover"
+        >
+          <img
+            src="./images/card-logo.svg"
+            alt="card-logo"
+            class="w-1/5 mb-4"
+          />
+          <div
+            class="tracking-widest text-sm flex gap-5 md:gap-12 md:text-xl"
+            id="card_number"
+          >
+            <span></span><span></span><span></span><span></span>
+          </div>
+          <div class="flex justify-between w-full text-xs md:text-xl">
+            <p id="owner_name"></p>
+            <p>
+              <span id="card_exipre_y"></span>/<span id="card_exipre_m"></span>
+            </p>
+          </div>
+        </article>
       </section>
-      <section>
-        <form>
-          <div>
+      <section class="pt-28 md:flex md:justify-center md:items-center w-full">
+        <form
+          class="md:w-1/3 mx-8 uppercase tracking-wider flex flex-col items-stratch gap-6"
+        >
+          <div class="flex flex-col gap-2">
             <label for="name">Cardholder's Name</label>
             <input
+              class="border-2 border-gray-300 rounded-lg px-4 py-2"
               type="text"
               id="name"
               name="name"
-              placeholder="Jane Appleseed"
+              autofocus
+              placeholder="e.g. Jane Appleseed"
             />
+            <p class="text-sm capitalize"></p>
           </div>
-          <div>
+          <div class="flex flex-col gap-2">
             <label for="card-number">Card Number</label>
             <input
-              type="text"
+              maxlength="16"
+              class="border-2 border-gray-300 rounded-lg px-4 py-2 tracking-widest"
               id="card-number"
+              type="text"
               name="card-number"
               placeholder="0000 0000 0000 0000"
             />
+            <p class="text-sm capitalize"></p>
           </div>
-          <div>
-            <label for="expiry-date">Expiry Date</label>
-            <input
-              type="text"
-              id="expiry-year"
-              name="expiry-year"
-              placeholder="00/00"
-            />
-            <input
-              type="text"
-              id="expiry-month"
-              name="expiry-month"
-              placeholder="00/00"
-            />
+          <div class="flex gap-1">
+            <div class="w-1/2 flex flex-col gap-2">
+              <label for="expiry-year">Exp.Date(MM/YY)</label>
+              <div class="flex gap-2">
+                <div>
+                  <input
+                    class="border-2 border-gray-300 rounded-lg px-4 py-2"
+                    min="01"
+                    max="12"
+                    type="number"
+                    id="expiry-year"
+                    name="expiry-year"
+                    placeholder="MM"
+                    maxlength="2"
+                    pattern="[0-9]{2}"
+                  />
+                  <p class="text-sm capitalize"></p>
+                </div>
+                <div>
+                  <input
+                    class="border-2 border-gray-300 rounded-lg px-4 py-2 w-full"
+                    type="number"
+                    min="19"
+                    max="50"
+                    maxlength="2"
+                    id="expiry-month"
+                    name="expiry-month"
+                    placeholder="YY"
+                    pattern="[0-9]{2}"
+                  />
+                  <p class="text-sm capitalize"></p>
+                </div>
+              </div>
+            </div>
+            <div class="w-1/2 flex flex-col gap-2">
+              <label for="cvv">cvc</label>
+              <div>
+                <input
+                  class="border-2 border-gray-300 outline-none rounded-lg px-4 py-2 w-full"
+                  type="number"
+                  maxlength="3"
+                  id="cvv"
+                  name="cvv"
+                  pattern="[0-9]{3}"
+                  placeholder="e.g. 123"
+                />
+                <p class="text-sm capitalize"></p>
+              </div>
+            </div>
           </div>
-          <div>
-            <label for="cvv">CVV</label>
-            <input type="text" id="cvv" name="cvv" placeholder="000" />
-          </div>
-          <button>Confirm</button>
-        </form>
 
-        <!-- Completed state start -->
-        <div>
-          <p>Thank you!</p>
-          <p>We've added your card details</p>
-          <button>Continue</button>
-        </div>
+          <button
+            class="bg-[#220930] text-white p-4 w-full rounded-lg text-sm md:text-xl"
+          >
+            Confirm
+          </button>
+        </form>
       </section>
     </main>
 
@@ -105,5 +157,15 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Hamza safwan</a>.
     </div>
+    <!-- Completed state start -->
+    <!-- <div>
+      <p>Thank you!</p>
+      <p>We've added your card details</p>
+      <button>Continue</button>
+    </div> -->
   </body>
+  <script src="./js/getDocumentElements.js"></script>
+  <script src="./js/helpers.js"></script>
+  <script src="./js/liveEdit.js"></script>
+  <script src="./js/submitForm.js"></script>
 </html>
