--- a/index.html
+++ b/index.html
@@ -12,37 +12,26 @@
       href="./images/favicon-32x32.png"
     />
 
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- get the main css file -->
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/keyframes.css" />
-    <script>
-      tailwind.config = {
-        theme: {
-          screens: {
-            sm: "375px",
-            // => @media (min-width: 375px) { ... }
+    <link rel="stylesheet" href="styles/main.css" />
 
-            md: "1440px",
-            // => @media (min-width: 1440px) { ... }
-          },
-        },
-      };
-    </script>
     <title>Frontend Mentor | Interactive card details form</title>
   </head>
 
   <body class="h-screen w-screen overflow-hidden">
     <main class="flex flex-col md:flex-row md:w-full md:h-full">
       <section
-        class="md:w-1/4 md:h-full relative h-[25vh] bg-[url('./images/bg-main-mobile.png')] md:bg-[url('./images/bg-main-desktop.png')] bg-no-repeat bg-cover relative flex"
+        class="md:w-1/4 md:h-full relative h-[25vh] bg-[url('../images/bg-main-mobile.png')] md:bg-[url('../images/bg-main-desktop.png')] bg-no-repeat bg-cover flex"
       >
         <article
-          class="md:h-[250px] md:w-[450px] md:left-1/2 md:top-auto md:bottom-[25%] md:translate-y-[25%] text-white rounded-lg flex justify-end px-16 items-center bg-[url('./images/bg-card-back.png')] h-3/4 w-3/4 m-6 bg-no-repeat bg-contain absolute -top-3 -right-6"
+          class="md:h-[250px] md:w-[450px] md:left-1/2 md:top-auto md:bottom-[25%] md:translate-y-[25%] text-white rounded-lg flex justify-end px-16 items-center bg-[url('../images/bg-card-back.png')] h-3/4 w-3/4 m-6 bg-no-repeat bg-contain absolute -top-3 -right-6"
         >
           <p id="card_cvv"></p>
         </article>
         <article
-          class="md:h-[250px] md:w-[450px] md:absolute md:left-1/3 md:top-[25%] md:-translate-y-[25%] text-white absolute flex flex-col justify-between gap-1 z-10 -bottom-16 rounded-lg bg-[url('./images/bg-card-front.png')] h-3/4 w-4/5 m-5 px-6 py-10 bg-no-repeat bg-cover"
+          class="md:h-[250px] md:w-[450px] md:absolute md:left-1/3 md:top-[25%] md:-translate-y-[25%] text-white absolute flex flex-col justify-between gap-1 z-10 -bottom-16 rounded-lg bg-[url('../images/bg-card-front.png')] h-3/4 w-4/5 m-5 px-6 py-10 bg-no-repeat bg-cover"
         >
           <img
             src="./images/card-logo.svg"
@@ -58,7 +47,9 @@
           <div class="flex justify-between w-full text-xs md:text-xl">
             <p id="owner_name"></p>
             <p>
-              <span id="card_exipre_y"></span>/<span id="card_exipre_m"></span>
+              <span id="card_exipre_m"></span>
+              /
+              <span id="card_exipre_y"></span>
             </p>
           </div>
         </article>
@@ -83,10 +74,11 @@
             <label for="card-number">Card Number</label>
             <input
               maxlength="16"
+              minlength="16"
               class="border-2 border-gray-300 rounded-lg px-4 py-2 tracking-widest"
               id="card-number"
               type="text"
-              name="card-number"
+              name="card number"
               placeholder="0000 0000 0000 0000"
             />
             <p class="text-sm capitalize"></p>
@@ -97,28 +89,29 @@
               <div class="flex gap-2">
                 <div>
                   <input
-                    class="border-2 border-gray-300 rounded-lg px-4 py-2"
+                    class="border-2 border-gray-300 rounded-lg px-4 py-2 w-full"
                     min="01"
                     max="12"
-                    type="number"
-                    id="expiry-year"
-                    name="expiry-year"
-                    placeholder="MM"
                     maxlength="2"
+                    type="number"
+                    id="expiry-month"
+                    name="expiry month"
+                    placeholder="MM"
                     pattern="[0-9]{2}"
                   />
                   <p class="text-sm capitalize"></p>
                 </div>
                 <div>
                   <input
-                    class="border-2 border-gray-300 rounded-lg px-4 py-2 w-full"
-                    type="number"
+                    class="border-2 border-gray-300 rounded-lg px-4 py-2"
                     min="19"
                     max="50"
-                    maxlength="2"
-                    id="expiry-month"
-                    name="expiry-month"
+                    type="number"
+                    type="number"
+                    id="expiry-year"
+                    name="expiry year"
                     placeholder="YY"
+                    maxlength="2"
                     pattern="[0-9]{2}"
                   />
                   <p class="text-sm capitalize"></p>
@@ -130,11 +123,8 @@
               <div>
                 <input
                   class="border-2 border-gray-300 outline-none rounded-lg px-4 py-2 w-full"
-                  type="number"
-                  maxlength="3"
                   id="cvv"
                   name="cvv"
-                  pattern="[0-9]{3}"
                   placeholder="e.g. 123"
                 />
                 <p class="text-sm capitalize"></p>
@@ -143,29 +133,48 @@
           </div>
 
           <button
+            id="submit-btn"
             class="bg-[#220930] text-white p-4 w-full rounded-lg text-sm md:text-xl"
           >
             Confirm
           </button>
+          <div class="attribution">
+            Challenge by
+            <a
+              href="https://www.frontendmentor.io?ref=challenge"
+              target="_blank"
+              >Frontend Mentor</a
+            >. Coded by <a href="https://www.frontendmentor.io/profile/Safwa9amar">Hamza safwan</a>.
+          </div>
         </form>
+        <div
+          id="successMessage"
+          class="hidden flex flex-col gap-4 items-center"
+        >
+          <div class="relative">
+            <img src="./images/check-container.svg" alt="icon-check" />
+            <img
+              id="check-mark"
+              src="./images/check-mark.svg"
+              alt="icon-check"
+            />
+          </div>
+          <p class="text-3xl">Thank you!</p>
+          <p>We've added your card details</p>
+          <button
+            id="success-btn"
+            class="bg-[#220930] text-white p-4 w-full rounded-lg text-sm md:text-xl"
+          >
+            Continue
+          </button>
+        </div>
       </section>
     </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Hamza safwan</a>.
-    </div>
     <!-- Completed state start -->
-    <!-- <div>
-      <p>Thank you!</p>
-      <p>We've added your card details</p>
-      <button>Continue</button>
-    </div> -->
   </body>
-  <script src="./js/getDocumentElements.js"></script>
-  <script src="./js/helpers.js"></script>
-  <script src="./js/liveEdit.js"></script>
+  <script src="./js/constants.js"></script>
+  <script src="./js/utils.js"></script>
+  <script src="./js/handleInputs.js"></script>
   <script src="./js/submitForm.js"></script>
 </html>
