--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body class="h-screen w-screen overflow-hidden">
     <main class="flex flex-col md:flex-row md:w-full md:h-full">
       <section
-        class="md:w-1/4 md:h-full relative h-[25vh] bg-[url('../images/bg-main-mobile.png')] md:bg-[url('../images/bg-main-desktop.png')] bg-no-repeat bg-cover flex"
+        class="md:!w-1/3  md:h-full relative h-[25vh] bg-[url('../images/bg-main-mobile.png')] md:bg-[url('../images/bg-main-desktop.png')] bg-no-repeat bg-cover flex"
       >
         <article
           class="md:h-[250px] md:w-[450px] md:left-1/2 md:top-auto md:bottom-[25%] md:translate-y-[25%] text-white rounded-lg flex justify-end px-16 items-center bg-[url('../images/bg-card-back.png')] h-3/4 w-3/4 m-6 bg-no-repeat bg-contain absolute -top-3 -right-6"
