--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,7 +31,7 @@
           <p id="card_cvv"></p>
         </article>
         <article
-          class="md:h-[250px] md:w-[450px] md:absolute md:left-1/2 md:top-[25%] md:-translate-y-[25%] text-white absolute flex flex-col justify-between gap-1 z-10 -bottom-16 rounded-lg bg-[url('../images/bg-card-front.png')] h-3/4 w-4/5 m-5 px-6 py-10 bg-no-repeat bg-cover"
+          class="md:h-[250px] md:w-[450px] md:absolute md:left-1/3 md:top-[25%] md:-translate-y-[25%] text-white absolute flex flex-col justify-between gap-1 z-10 -bottom-16 rounded-lg bg-[url('../images/bg-card-front.png')] h-3/4 w-4/5 m-5 px-6 py-10 bg-no-repeat bg-cover"
         >
           <img
             src="./images/card-logo.svg"
